@@ -44,9 +44,9 @@ public class TestMiniMRDFSCaching extends TestCase {
       dfs = new MiniDFSCluster(65314, conf, true);
       fileSys = dfs.getFileSystem();
       namenode = fileSys.getName();
-      mr = new MiniMRCluster(50050, 50060, 2, namenode, true, 4);
+      mr = new MiniMRCluster(60050, 50060, 2, namenode, true, 4);
       // run the wordcount example with caching
-      boolean ret = MRCaching.launchMRCache("localhost:50050",
+      boolean ret = MRCaching.launchMRCache("localhost:"+mr.getJobTrackerPort(),
                                             "/testing/wc/input",
                                             "/testing/wc/output", namenode,
                                             conf,
